update:     login views     colors in views

--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
@@ -54,7 +54,7 @@
             <select name="sort">
                 <option value="ThoiGian_BD">Theo thời gian</option>
                 <option value="GiangVien">Theo giảng viên</option>
-                <option value="LopGiangDay">Theo lớp học</option>
+                <option value="MaLopSV">Theo lớp học</option>
                 <option value="HinhThuc">Theo loại thủ tục</option>
             </select>
             <button type="submit">Lọc</button>
@@ -144,7 +144,7 @@
 
             <!-- Mẫu dữ liệu -->
             <!-- Test data cho lập thủ tục mượn phòng học -->
-            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?UC=MPH&Display=YCMPH&UIDRegular=123456987&MaLMPH=B100213&GiangVien=Ng%C3%B4%20Cao%20Hy&MaLopSV=D21CQCN02-N&TenMH=To%C3%A1n%20r%E1%BB%9Fi%20r%E1%BA%A1c%202&MaPH=2B31&ThoiGian_BD=7%3A00%2002%2F03%2F2024&ThoiGian_KT=10%3A30%2002%2F03%2F2024&HinhThuc=H%E1%BB%8Dc%20th%E1%BB%B1c%20h%C3%A0nh&LyDo=&TrangThai=Ch%C6%B0a%20m%C6%B0%E1%BB%A3n&NgMPH=Ng%C3%B4%20Cao%20Hy&VaiTro=Gi%E1%BA%A3ng%20vi%C3%AAn&QL_Duyet=Th%C3%A1i%20V%C4%83n%20Anh%20Ch%C3%ADnh&YeuCau=&_DeleteAt=';">
+            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?UC=MPH&Display=YCMPH&UIDRegular=123456987&MaLMPH=B100213&MaLH=L123&GiangVien=Nguy%E1%BB%85n%20%C4%90%E1%BB%A9c%20Th%E1%BB%8Bnh&MaLopSV=D22CQCN01-N&MaMH=INT1359-3&TenMH=To%C3%A1n%20r%E1%BB%9Di%20r%E1%BA%A1c%202&MaPH=2B31&ThoiGian_BD=7%3A00%2002%2F03%2F2024&ThoiGian_KT=10%3A30%2002%2F03%2F2024&HinhThuc=H%E1%BB%8Dc%20th%E1%BB%B1c%20h%C3%A0nh&LyDo=&TrangThai=Ch%C6%B0a%20m%E1%BB%B1%E1%BB%9Dn&NgMPH=&VaiTro=&QL_Duyet=&YeuCau=';">
                 <td class="MaLMPH">B100213</td>
                 <td class="GiangVien">Nguyễn Đức Thịnh</td>
                 <td class="MaLopSV">D21CQCN02-N</td>
