--- a/ProjectQuảnLýMượnPhòngHọc/Home/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/Home/index.html
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="menu-manager">
-                <a class="" href="../DsLopHoc/index.html" target="board-content">
+                <a class="" href="../DsLopHoc/index.html?UC=DsLH&Display=DsLH&UIDManager=${UIDManager}" target="board-content">
                     Danh sách lớp học
                 </a>
             </li>
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li class="menu-regular">
-                <a class="" href="../DsLopHoc/index.html?UC=DBH&Display=TTDBH" target="board-content">
+                <a class="" href="../DsLopHoc/index.html?UC=DBH&Display=DsLH&UIDRegular=${UIDRegular}" target="board-content">
                     Đổi buổi học
                 </a>
             </li>
