fix color params

--- a/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsGiangVien/index.html
@@ -1,19 +1,20 @@
 <!-- Điều hướng nhận điều kiện:
-        UC
-        Display
-        Form
-        UIDManager
+        UC              -   Usecase sử dụng
+        Display         -   UC/Display sử dụng
+        Form            -   UC/Form sử dụng
+        UIDManager      -   UsecaseID quản lý
     Điều hướng nhận thông tin:
-        SearchInput - Dữ liệu tìm kiếm
-        SearchOption
+        SearchInput     -   Input tìm kiếm
+        SearchOption    -   Option tìm kiếm
         <DsGV> với thông tin:
-            MaGV
-            HoTen
-            NgaySinh
-            GioiTinh
-            Email
-            SDT
-            ChucDanh
+            IdGV        -   Id giảng viên
+            MaGV        -   Mã giảng viên
+            HoTen       -   Họ tên giảng viên
+            NgaySinh    -   Ngày sinh
+            GioiTinh    -   Giới tính
+            Email       -   Email
+            SDT         -   Số điện thoại
+            ChucDanh    -   Chức danh
 -->
 
 <!DOCTYPE html>
