--- a/ProjectQuảnLýMượnPhòngHọc/Login/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/Login/index.html
@@ -1,9 +1,9 @@
 <!-- Điều hướng nhận điều kiện:
-        UIDManager
+        //ByPass
     Điều hướng nhận thiết lập sẵn:
-        addressContact
-        emailContact
-        phoneContact
+        addressContact  -   Địa chỉ liên hệ
+        emailContact    -   Email liên hệ
+        phoneContact    -   Số điện thoại liên hệ
 -->
 
 <!DOCTYPE html>
