--- a/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
@@ -1,9 +1,11 @@
 <!-- Điều hướng nhận điều kiện:
-        UIDManager      
+        UIDManager
     Điều hướng nhận thiết lập sẵn:
         addressContact
         emailContact
         phoneContact
+    Điều hướng nhận thông tin:
+        Token
 -->
 
 <!DOCTYPE html>
@@ -92,6 +94,7 @@
         </p>
         <p>
             <span>UID: ${UIDManager}</span>
+            <span><b>Mã xác nhận: ${Token}</b></span>
         </p>
     </footer>
 </body>
