update: Model and Bean

--- a/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
@@ -7,7 +7,7 @@
     Điều hướng nhận thông tin:
         SearchInput     -   Input tìm kiếm
         SearchOption    -   Option tìm kiếm
-        <DsGV> với thông tin:
+            <LopHoc> với thông tin:
             MaLH        -   Mã lớp học
             IdGV        -   Id giảng viên
             GiangVien   -   Họ tên giảng viên
