--- a/ProjectQuảnLýMượnPhòngHọc/TTMuonPhongHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/TTMuonPhongHoc/index.html
@@ -1,27 +1,30 @@
-<!-- Điều hướng nhận điều kiện:
-        UC              -   Usecase sử dụng
-        Display         -   UC/Display sử dụng
-        Form            -   UC/Form sử dụng
-        UIDManager      -   UsecaseID quản lý
-        UIDRegular      -   UsecaseID người mượn phòng
-    Điều hướng nhận thông tin:
-        MaLMPH          -   Mã lịch mượn phòng
-        MaLH            -   Mã lớp học
-        IdGV            -   Id giảng viên
-        GiangVien       -   Họ tên giảng viên
-        MaLopSV         -   Mã lớp giảng dạy
-        MaMH            -   Mã môn học
-        TenMH           -   Tên môn học
-        MaPH            -   Mã phòng học    
-        ThoiGian_BD     -   Thời gian mượn
-        ThoiGian_KT     -   Thời gian trả
-        HinhThuc        -   Hình thức
-        LyDo            -   Lý do
-        TrangThai       -   Trạng thái mượn
-        NgMPH           -   Người mượn phòng học
-        VaiTro          -   Vai trò người mượn phòng
-        QL_Duyet        -   Quản lý duyệt
-        YeuCau          -   Yêu cầu khi mượn
+<!-- 
+    Controller:
+        Điều hướng nhận điều kiện:
+            UC              -   Usecase sử dụng
+            Display         -   UC/Display sử dụng
+            Form            -   UC/Form sử dụng
+            UIDManager      -   UsecaseID quản lý
+            UIDRegular      -   UsecaseID người mượn phòng
+        Điều hướng nhận thông tin:
+            MaLMPH          -   Mã lịch mượn phòng
+            MaLH            -   Mã lớp học
+            IdGV            -   Id giảng viên
+            GiangVien       -   Họ tên giảng viên
+            MaLopSV         -   Mã lớp giảng dạy
+            MaMH            -   Mã môn học
+            TenMH           -   Tên môn học
+            MaPH            -   Mã phòng học    
+            ThoiGian_BD     -   Thời gian mượn
+            ThoiGian_KT     -   Thời gian trả
+            HinhThuc        -   Hình thức
+            LyDo            -   Lý do
+            TrangThai       -   Trạng thái mượn
+            NgMPH           -   Người mượn phòng học
+            VaiTro          -   Vai trò người mượn phòng
+            QL_Duyet        -   Quản lý duyệt
+            YeuCau          -   Yêu cầu khi mượn
+    Chuẩn View URL truy cập:   ../${Usecase}/${Display}${Form}.htm?MaLichMPH=${MaLichMPH}
 -->
 <!DOCTYPE html>
 <html lang="en">
