--- a/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
@@ -1,21 +1,24 @@
-<!-- Điều hướng nhận điều kiện:
-        UC              -   Usecase sử dụng
-        Display         -   UC/Display sử dụng
-        Form            -   UC/Form sử dụng
-        UIDManager      -   UsecaseID quản lý
-        UIDRegular      -   UsecaseID người mượn phòng
-    Điều hướng nhận thông tin:
-        SearchInput     -   Input tìm kiếm
-        SearchOption    -   Option tìm kiếm
+<!--
+    Controller: 
+        Điều hướng nhận điều kiện:
+            Usecase              -   Usecase sử dụng
+            Display         -   Usecase/Display sử dụng
+            Form            -   Usecase/Form sử dụng
+            UIDManager      -   UsecaseID quản lý
+            UIDRegular      -   UsecaseID người mượn phòng
+        Điều hướng nhận thông tin:
+            SearchInput     -   Input tìm kiếm
+            SearchOption    -   Option tìm kiếm
             <LopHoc> với thông tin:
-            MaLH        -   Mã lớp học
-            IdGV        -   Id giảng viên
-            GiangVien   -   Họ tên giảng viên
-            MaLopSV     -   Mã lớp giảng dạy
-            MaMH        -   Mã môn học
-            TenMH       -   Tên môn học
-            Ngay_BD     -   Kỳ học bắt đầu
-            Ngay_KT     -   Kỳ học kết thúc
+                MaLH        -   Mã lớp học
+                IdGV        -   Id giảng viên
+                GiangVien   -   Họ tên giảng viên
+                MaLopSV     -   Mã lớp giảng dạy
+                MaMH        -   Mã môn học
+                TenMH       -   Tên môn học
+                Ngay_BD     -   Kỳ học bắt đầu
+                Ngay_KT     -   Kỳ học kết thúc
+    Chuẩn View URL truy cập:   ../${Usecase}/${Display}${Form}.htm?SearchInput=${SearchInput}&SearchOption=${SearchOption}
 -->
 
 <!DOCTYPE html>
@@ -61,7 +64,7 @@
                 <!-- <c:forEach var="LopHoc" items="${DsLopHoc}"> -->
                     <!--  Sử dụng Usecase với trường hợp sử dụng là cung cấp thông tin đổi buổi học 
                         điều hướng với điều kiện: 
-                            UC=DBH
+                            Usecase=DBH
                             Display=TTDBH
                             UIDRegular
                         điều hướng với thông tin:
@@ -72,7 +75,7 @@
                             MaMH=${LopHoc.MaMH}
                             TenMH=${LopHoc.MaMH}     
                     -->
-                    <!-- <tr onclick="location.href = '../TTMuonPhongHoc/index.html?UC=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=${LopHoc.MaLH}&GiangVien=${LopHoc.GiangVien}&MaLopSV=${LopHoc.MaLopSV}&MaMH=${LopHoc.MaMH}&TenMH=${LopHoc.TenMH}';">
+                    <!-- <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=${LopHoc.MaLH}&GiangVien=${LopHoc.GiangVien}&MaLopSV=${LopHoc.MaLopSV}&MaMH=${LopHoc.MaMH}&TenMH=${LopHoc.TenMH}';">
                         <td class="MaLH">${LopHoc.MaLH}</td>
                         <td class="MaMH">${LopHoc.MaMH}</td>
                         <td class="TenMH">${LopHoc.TenMH}</td>
@@ -84,7 +87,7 @@
                 </c:forEach> -->
 
                 <!-- Mẫu dữ liệu -->
-                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?UC=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=L123&GiangVien=Nguy%E1%BB%85n%20%C4%90%E1%BB%A9c%20Th%E1%BB%8Bnh&MaLopSV=D22CQCN01-N&MaMH=INT1359-3&TenMH=To%C3%A1n%20r%E1%BB%9Fi%20r%E1%BA%A1c%202';">
+                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=L123&GiangVien=Nguy%E1%BB%85n%20%C4%90%E1%BB%A9c%20Th%E1%BB%8Bnh&MaLopSV=D22CQCN01-N&MaMH=INT1359-3&TenMH=To%C3%A1n%20r%E1%BB%9Fi%20r%E1%BA%A1c%202';">
                     <td class="MaLH">L123</td>
                     <td class="GiangVien">Nguyễn Đức Thịnh</td>
                     <td class="MaLopSV">D22CQCN01-N</td>
@@ -94,7 +97,7 @@
                     <td class="Ngay_KT">10/05/2024</td>
                 </tr>
                 <!-- Sử dụng Usecase với trường hợp sử dụng là xem thông tin mượn phòng học ( Display=TTMPH ) -->
-                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?UC=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=L124&GiangVien=Nguy%E1%BB%85n%20Ng%E1%BB%8Dc%20Duy&MaLopSV=D21CQAT01-N&MaMH=INT1341&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20tr%C3%AD%20tu%E1%BB%87%20nh%C3%A2n%20t%E1%BA%A1o';">
+                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=L124&GiangVien=Nguy%E1%BB%85n%20Ng%E1%BB%8Dc%20Duy&MaLopSV=D21CQAT01-N&MaMH=INT1341&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20tr%C3%AD%20tu%E1%BB%87%20nh%C3%A2n%20t%E1%BA%A1o';">
                     <td class="MaLH">L124</td>
                     <td class="GiangVien">Nguyễn Ngọc Duy</td>
                     <td class="MaLopSV">D21CQAT01-N</td>
@@ -103,7 +106,7 @@
                     <td class="Ngay_BD">11/01/2024</td>
                     <td class="Ngay_KT">04/04/2024</td>
                 </tr>
-                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?UC=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=L125&GiangVien=Nguy%E1%BB%85n%20Th%E1%BB%8B%20B%C3%ADch%20Nguy%C3%AAn&MaLopSV=D21CQCN01-N&MaMH=INT1340&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20c%C3%B4ng%20ngh%E1%BB%87%20ph%E1%BA%A7n%20m%E1%BB%81m';">
+                <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=DBH&Display=TTDBH&UIDRegular=${UIDRegular}&MaLH=L125&GiangVien=Nguy%E1%BB%85n%20Th%E1%BB%8B%20B%C3%ADch%20Nguy%C3%AAn&MaLopSV=D21CQCN01-N&MaMH=INT1340&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20c%C3%B4ng%20ngh%E1%BB%87%20ph%E1%BA%A7n%20m%E1%BB%81m';">
                     <td class="MaLH">L125</td>
                     <td class="GiangVien">Nguyễn Thị Bích Nguyên</td>
                     <td class="MaLopSV">D21CQCN01-N</td>
