--- a/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
@@ -1,11 +1,14 @@
-<!-- Điều hướng nhận điều kiện:
-        UIDManager
-    Điều hướng nhận thiết lập sẵn:
-        addressContact
-        emailContact
-        phoneContact
-    Điều hướng nhận thông tin:
-        Token
+<!-- 
+    Controller:
+        Điều hướng nhận điều kiện:
+            UIDManager
+        Điều hướng nhận thiết lập sẵn:
+            addressContact
+            emailContact
+            phoneContact
+        Điều hướng nhận thông tin:
+            Token
+    Chuẩn View URL truy cập:   ../Home.htm
 -->
 
 <!DOCTYPE html>
@@ -38,36 +41,50 @@
                 </a>
             </li>
             <li class="menu-manager">
-                <a class="" href="../DsMuonPhongHoc/index.html?UC=DsMPH&Display=DsMPH&UIDManager=${UIDManager}" target="board-content">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="../DsMPH/DsMPH" target="board-content"></a> -->
+                <a class="" href="../DsMuonPhongHoc/index.html?Usecase=DsMPH&Display=DsMPH&UIDManager=${UIDManager}" target="board-content">
                     Danh sách mượn phòng học
                 </a>
             </li>
             <li class="menu-manager">
-                <a class="" href="../DsGiangVien/index.html?UC=DsGV&Display=DsGV&UIDManager=${UIDManager}" target="board-content">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="../DsGV/DsGV" target="board-content"></a> -->
+                <a class="" href="../DsGiangVien/index.html?Usecase=DsGV&Display=DsGV&UIDManager=${UIDManager}" target="board-content">
                     Danh sách giảng viên
                 </a>
             </li>
             <li class="menu-manager">
-                <a class="" href="../DsLopHoc/index.html?UC=DsLH&Display=DsLH&UIDManager=${UIDManager}" target="board-content">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="../DsLH/DsLH" target="board-content"></a> -->
+                <a class="" href="../DsLopHoc/index.html?Usecase=DsLH&Display=DsLH&UIDManager=${UIDManager}" target="board-content">
                     Danh sách lớp học
                 </a>
             </li>
             <li class="menu-regular">
-                <a class="" href="../DsMuonPhongHoc/index.html?UC=MPH&Display=YCMPH&UIDRegular=${UIDRegular}" target="board-content">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="../MPH/MsMPH" target="board-content"></a> -->
+                <a class="" href="../DsMuonPhongHoc/index.html?Usecase=MPH&Display=YCMPH&UIDRegular=${UIDRegular}" target="board-content">
                     <span>Mượn phòng học</span>
                 </a>
             </li>
             <li class="menu-regular">
-                <a class="" href="../DsLopHoc/index.html?UC=DBH&Display=DsLH&UIDRegular=${UIDRegular}" target="board-content">
-                    Đổi buổi học
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="../DPH/DsLH" target="board-content"></a> -->
+                <a class="" href="../DsLopHoc/index.html?Usecase=DBH&Display=DsLH&UIDRegular=${UIDRegular}" target="board-content">
+                    Đổi phòng học
                 </a>
             </li>
             <li class="menu-admin">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="none" target="board-content"></a> -->
                 <a class="" href="#" target="board-content">
                     <span>Quản lý tài khoản</span>
                 </a>
             </li>
             <li class="menu-admin">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="none" target="board-content"></a> -->
                 <a class="" href="#" target="board-content">
                     <span>Lịch sử hoạt động</span>
                 </a>
