update:     action fix:     we fixed some bugs that need to handle     sync color

--- a/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsLopHoc/index.html
@@ -128,7 +128,7 @@
             <p>
                 <b>1. Chọn lớp học mà sinh viên, giảng viên cần mượn phòng giảng dạy.</b><br>
                 2. Cung cấp thêm thông tin mượn phòng để quản lý duyệt. <br>
-                3. Quản lý kiểm tra thông tin và nhận đồ xài :&gt;
+                3. Chờ quản lý kiểm tra thông tin và nhận đồ xài :&gt;
             </p>
             <button id="closeGuide">Close</button>
         </form>
