--- a/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/DsMuonPhongHoc/index.html
@@ -82,7 +82,7 @@
         <tbody>
             <!-- Sử dụng Usecase với trường hợp sử dụng là xem thông tin mượn phòng học với thông tin lịch mượn phòng đã chọn 
                     điều hướng với điều kiện: 
-                        Usecase=DsMPH
+                        Usecase=TTMPH
                         Display=TTMPH
                         UIDManager
                     điều hướng với thông tin:
@@ -153,7 +153,7 @@
                 <td class="TrangThai">Chưa mượn</td>
             </tr>
             <!-- Test data rỗng -->
-            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=DsMPH&Display=TTMPH&UIDManager=123456987';">
+            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=TTMPH&Display=TTMPH&UIDManager=123456987';">
                 <td class="MaLMPH">C100214</td>
                 <td class="GiangVien"></td>
                 <td class="MaLopSV"></td>
@@ -165,7 +165,7 @@
                 <td class="TrangThai">Đã hủy</td>
             </tr>
             <!-- Test data cho xem thông tin lịch mượn phòng -->
-            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=DsMPH&Display=TTMPH&UIDManager=123456987&MaLMPH=D100214&GiangVien=Nguy%E1%BB%85n%20Th%E1%BB%8B%20B%C3%ADch%20Nguy%C3%AAn&MaLopSV=D21CQCN01-N&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20c%C3%B4ng%20ngh%E1%BB%87%20ph%E1%BA%A7n%20m%E1%BB%81m&MaPH=2A08&ThoiGian_BD=13%3A00%2028%2F02%2F2024&ThoiGian_KT=16%3A30%2028%2F02%2F2024&HinhThuc=H%E1%BB%8Dc%20l%C3%BD%20thuy%E1%BA%BFt&LyDo=%C4%90%E1%BB%95i%20ph%C3%B2ng%20h%E1%BB%8Dc&TrangThai=%C4%90%C3%A3%20m%C6%B0%E1%BB%A3n&NgMPH=Ng%C3%B4%20Cao%20Hy&VaiTro=Tr%E1%BB%A3%20gi%E1%BA%A3ng&QL_Duyet=Th%C3%A1i%20V%C4%83n%20Anh%20Ch%C3%ADnh&YeuCauHocCu=MC%2BR%2BMT';">
+            <tr onclick="location.href = '../TTMuonPhongHoc/index.html?Usecase=TTMPH&Display=TTMPH&UIDManager=123456987&MaLMPH=D100214&GiangVien=Nguy%E1%BB%85n%20Th%E1%BB%8B%20B%C3%ADch%20Nguy%C3%AAn&MaLopSV=D21CQCN01-N&TenMH=Nh%E1%BA%ADp%20m%C3%B4n%20c%C3%B4ng%20ngh%E1%BB%87%20ph%E1%BA%A7n%20m%E1%BB%81m&MaPH=2A08&ThoiGian_BD=13%3A00%2028%2F02%2F2024&ThoiGian_KT=16%3A30%2028%2F02%2F2024&HinhThuc=H%E1%BB%8Dc%20l%C3%BD%20thuy%E1%BA%BFt&LyDo=%C4%90%E1%BB%95i%20ph%C3%B2ng%20h%E1%BB%8Dc&TrangThai=%C4%90%C3%A3%20m%C6%B0%E1%BB%A3n&NgMPH=Ng%C3%B4%20Cao%20Hy&VaiTro=Tr%E1%BB%A3%20gi%E1%BA%A3ng&QL_Duyet=Th%C3%A1i%20V%C4%83n%20Anh%20Ch%C3%ADnh&YeuCauHocCu=MC%2BR%2BMT';">
                 <td class="MaLMPH">D100214</td>
                 <td class="GiangVien">Nguyễn Thị Bích Nguyên</td>
                 <td class="MaLopSV">D21CQCN01-N</td>
@@ -185,7 +185,7 @@
             <p>
                 <b>1. Chọn lịch học mà sinh viên, giảng viên cần mượn phòng giảng dạy.<br></b>
                 2. Cung cấp thêm thông tin mượn phòng để quản lý duyệt. <br>
-                3. Quản lý kiểm tra thông tin và nhận đồ xài :&gt;
+                3. Chờ quản lý kiểm tra thông tin và nhận đồ xài :&gt;
             </p>
             <button>Close</button>
         </form>
