--- a/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/HomeManager/index.html
@@ -26,9 +26,15 @@
     <header>
         <h2>My PTIT</h1>
         <nav>
+            <!-- URL sử dụng trong controller -->
+            <!-- <a class="" href="../Introduce.htm">Home</a> -->
             <a href="index.html">Home</a>
-            <a href="#">About</a>
+            <!-- URL sử dụng trong controller -->
+            <!-- <a class="" href="../Introduce.htm">About</a> -->
+            <a href="../GioiThieu/index.html">About</a>
             <a href="#">Account</a>
+            <!-- URL sử dụng trong controller -->
+            <!-- <a class="" href="../Login.htm">Logout</a> -->
             <a href="#">Logout</a>
         </nav>
     </header>
@@ -36,6 +42,8 @@
     <main>
         <menu class="board-menu">
             <li class="menu-home">
+                <!-- URL sử dụng trong controller -->
+                <!-- <a class="" href="../Introduce.htm" target="board-content"></a> -->
                 <a class="" href="../GioiThieu/index.html" target="board-content">
                     Về ứng dụng
                 </a>
