--- a/ProjectQuảnLýMượnPhòngHọc/TTMuonPhongHoc/index.html
+++ b/ProjectQuảnLýMượnPhòngHọc/TTMuonPhongHoc/index.html
@@ -39,8 +39,8 @@
     <nav  class="board-bar">
         <a class="go-back" onclick="history.back()">Quay lại</a>
         <h2 class="title">SomeThingError!</h2>
-        <button class="update-object" onclick="">Chỉnh sửa</button>
-        <button class="remove-object" onclick="">Xóa</button>
+        <button class="update-object hidden" onclick="settingToUpdateData()">Chỉnh sửa</button>
+        <button class="remove-object hidden" onclick="">Xóa</button>
     </nav>
     <main>
         <form class="board-content">
@@ -106,10 +106,10 @@
             </label>
             <label class="XacNhan">
                 <span>Mã xác nhận: </span>
-                <input type="text" disabled>
+                <input type="text" disabled required>
             </label>
-            <div>
-                <button class="cancel-object" type="button" onclick="history.back()">Hủy bỏ</button>
+            <div class="submit">
+                <button class="cancel-object" type="button" onclick="settingToCancelChangeData()">Hủy bỏ</button>
                 <button class="submit-object" type="submit" formaction="#">Cập nhật</button>
                 <button class="conform-object" type="submit" formaction="#">Xác nhận</button>
             </div>
@@ -122,7 +122,7 @@
             <p>
                 1. Chọn lớp học mà sinh viên, giảng viên cần mượn phòng giảng dạy.<br>
                 <b>2. Cung cấp thêm thông tin mượn phòng để quản lý duyệt.</b> <br>
-                3. Quản lý kiểm tra thông tin và nhận đồ xài :&gt;
+                3. Chờ quản lý kiểm tra thông tin và nhận đồ xài :&gt;
             </p>
             <button>Close</button>
         </form>
